# deck-generator-agent-skills

./: .env.template  .gitignore  CLAUDE.MD  FIX_SUMMARY.md  GRAPHICS_FEATURE.md  MIGRATION.md  QUICKSTART.md  README.md  README_TESTING.md  TESTING.md  inspect_traces.py  langgraph.json  pyproject.toml  requirements.txt  test_agent.py  test_agent_query.py  test_agent_simple.py  test_simple_agent.py  verify_setup.py
ppt_agent/: __init__.py  agent.py
ppt_agent/skills/: README.md  __init__.py  loader.py
ppt_agent/skills/definitions/: powerpoint_creator.txt
ppt_agent/skills/scripts/: create_presentation.py  list_presentations.py
ppt_agent/subagents/: __init__.py  research_agent.py
ppt_agent/utils/: __init__.py  tools.py
