[project]
name = "ppt-agent"
version = "0.1.0"
description = "AI-powered PowerPoint deck generator using LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.3",
    "langchain-core>=1.2.4",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langsmith>=0.6.3",
    "python-pptx>=1.0.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "langgraph-api==0.6.11",
    "langchain-tavily>=0.2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
# UV-specific configuration

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
